k8s/dj_app_service.yml
apiVersion: v1
kind: Service
metadata:
  name: dj-app-service
  labels:
    app.kubernetes.io/name: django-application-service
    app.kubernetes.io/instance: django-application-service-v1
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/component: web-application
    app.kubernetes.io/part-of: dvmn-k8s-lesson-1
spec:
  selector:
    app.kubernetes.io/name: django-application
  ports:
    - protocol: TCP
      port: 80
      targetPort: django-app-port
